--- a/package.json
+++ b/package.json
@@ -1,1 +1,17 @@
-
+{
+  "name": "my-3d-website",
+  "version": "1.0.0",
+  "description": "A 3D website with a cartoony and modern look",
+  "main": "main.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "three": "^0.149.0"
+  },
+  "devDependencies": {
+    "vite": "^4.0.0"
+  }
+}
